cts - fixed reaction name overlapping chemical in gentrans output reaction pathway component

--- a/cts/stylesheets/style_gentrans_tree.css
+++ b/cts/stylesheets/style_gentrans_tree.css
@@ -68,7 +68,9 @@ div#reactionpathways {
     color: #000000;
     font-size: 10px;
     margin: auto;
-    display: inline-block;
+    /*display: inline-block;*/
+    padding-left: 2px;
+    padding-right: 2px;
 }
 #arrow_wrap img {
     width:70px;
